# atlas

./: CMakeLists.txt  README.md
assets/shaders/: scene.frag  scene.vert
assets/sprites/: sprite.aseprite
include/ecs/: component.h  ecs.h  entity.h  system.h  world.h
include/engine/: ecs.cpp  gl_renderer.hpp  input.h  shader.h  utils.h
include/platform/: win32.h
include/utils/: vector.h
src/: main.cpp
src/core/: helper.cpp  renderer.cpp  shader.cpp  win32.cpp
